--- a/LocalTriviaProject/LocalTriviaProject/LocalTriviaProject.csproj
+++ b/LocalTriviaProject/LocalTriviaProject/LocalTriviaProject.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoardNode.cs" />
+    <Compile Include="Card.cs" />
+    <Compile Include="CardParser.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
